Bug 492163, bug 492112, and bug 483604.  Stop putting the style contexts of textnodes and CSS generated content in the undisplayed map, and make sure to properly unbind generated content if we don't plan to actually create a frame construction item for it.  r+sr=dbaron